fix(!desktop): avoid clipping formula bar handles
Since Ie3755e01a92c39ab5ab178e7634fcdd7a27bdf73, the web view of
Collabora Online has had the formula bar displaying at the top - except,
that is, for on mobile where it was specifically excluded

While we don't need the formula bar to display on top for font dropdown
reasons, we still want it on top for the new formula bar selection
handles which otherwise are clipped by the cell headers

Additionally, on tablets we need to remove this line which clips the
content of the toolbar, including the formula bar handles which may need
to overflow this area. This was added in a commit by Pedro to make tabs
scrollable, I19a4667a08df3b75e71dd71763dca3ceef9f689a, which still works
after this change...

--- a/browser/css/device-mobile.css
+++ b/browser/css/device-mobile.css
@@ -174,6 +174,9 @@ textarea.cool-annotation-textarea {
 	z-index: auto !important;
 	flex-direction: column;
 }
+#toolbar-wrapper.mobile #formulabar-row {
+	z-index: 11;
+}
 .toolbar-row {
 	display: flex;
 	flex-direction: row;
